--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -32,7 +32,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
-  <body>
+  <body direction="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
